package com.university.project.legendsofswordandwand.battle;

public class AbilityExecutor {}
