package com.university.project.legendsofswordandwand.controller;

public class BattleController {}
